--- a/style.css
+++ b/style.css
@@ -1,18 +1,9 @@
 :root {
+  box-sizing: border-box;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
   color: #213547;
   background-color: #ffffff;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #747bff;
 }
 
 body {
@@ -23,57 +14,125 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 #app {
-  width: 90%;
-  /* min-width: 1150px; */
+  position: relative;
+  padding-block: 10px;
+  width: clamp(400px, 100%, 1200px);
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  background-color: rgb(132, 214, 187);
+  border-radius: 5px;
+  border: #59bb82 2px solid;
 }
 
-.card {
-  padding: 2em;
-}
-
-button {
+#app>button {
   display: inline;
   border-radius: 8px;
-  border: 3px solid #406b6e;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  border: 2px solid #406b6e;
+  padding: 0.5em;
+  margin: 3px;
+  font-size: 0.8em;
   font-weight: 500;
   font-family: inherit;
   background-color: #63a9af;
   cursor: pointer;
-  transition: border-color 0.25s;
+  outline: none;
 }
+
 button:hover {
   border-color: #646cff;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px;
-  background-color:rgb(132, 214, 187);
-  border-radius: 5px;
-  border: #59bb82 2px solid;
+.main {
+  position: relative;
 }
 
 #screen {
+  line-height: 1;
   padding-top: 40px;
   padding-bottom: 70px;
-  font-size: 2vw;
+  font-size: clamp(15px, 2.8vw, 28px);
+}
+
+#me {
+  color: #9e2626;
 }
 
 #desc {
   padding: 5px;
-  background-color:aquamarine;
+  background-color: aquamarine;
   border-radius: 5px;
   border: #59bb82 2px solid;
+}
+
+#completeMsg {
+  display: none;
+  font-size: min(2.5vw, 20px);
+  position: absolute;
+  top: 100px;
+  min-width: 200px;
+  inset-inline: 30px;
+  border-radius: 5px;
+  border: #5f8d91 1px solid;
+  background-color: #a7dabc;
+  padding: 20px;
+}
+
+.virtualKeyboard {
+  display: none;
+  position: absolute;
+  right: 80px;
+  bottom: 200px;
+}
+
+.virtualKeyboard button {
+  cursor: pointer;
+  position: relative;
+  background-color: #2dd3e2;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  border: none;
+  border-radius: 5px;
+  margin: 0;
+}
+
+#upBtn {
+  position: absolute;
+  top: -30px;
+}
+
+#downBtn {
+  position: absolute;
+  top: 30px;
+}
+
+#leftBtn {
+  position: absolute;
+  left:-30px;
+}
+
+#rightBtn {
+  position: absolute;
+  left: 30px;
+}
+
+@media screen and (min-width: 576px) {
+  #app {
+    width: 80%;
+    padding-inline: 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #app>button {
+    padding: 0.6em;
+    font-size: 1.2em;
+  }
+}
+
+@media (pointer: coarse) {
+  .virtualKeyboard{
+    display: block;
+  }
 }
