--- a/style.css
+++ b/style.css
@@ -25,7 +25,9 @@ body {
   border: #59bb82 2px solid;
 }
 
-#app>button {
+#app>button,
+#menuBtn,
+.stageMenu>button {
   display: inline;
   border-radius: 8px;
   border: 2px solid #406b6e;
@@ -39,7 +41,7 @@ body {
   outline: none;
 }
 
-button:hover {
+#app>button:hover {
   border-color: #646cff;
 }
 
@@ -56,6 +58,12 @@ button:hover {
 
 #me {
   color: #9e2626;
+}
+
+#stageCounter {
+  display: inline;
+  font-size: 2em;
+  padding-right: 20px;
 }
 
 #desc {
@@ -77,6 +85,26 @@ button:hover {
   background-color: #a7dabc;
   padding: 20px;
 }
+
+
+@media screen and (min-width: 576px) {
+  #app {
+    width: 80%;
+    padding-inline: 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #app>button,
+  #menuBtn {
+    padding: 0.6em;
+    font-size: 1.2em;
+  }
+}
+
+
+/* virtualKeyboard */
+
 
 .virtualKeyboard {
   display: none;
@@ -117,22 +145,81 @@ button:hover {
   left: 30px;
 }
 
-@media screen and (min-width: 576px) {
-  #app {
-    width: 80%;
-    padding-inline: 2rem;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  #app>button {
-    padding: 0.6em;
-    font-size: 1.2em;
-  }
-}
-
 @media (pointer: coarse) {
   .virtualKeyboard{
     display: block;
+  }
+}
+
+
+/* stageMenu */
+
+
+.stageMenuWrapper {
+  display: none;
+  position: absolute;
+  top: -10px;
+  inset-inline: 0px;
+  min-height: 500px;
+  border: #213547 3px solid;
+  background-color: inherit;
+}
+
+.stageMenu {
+  width: 350px;
+  margin-inline: auto;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 25px;
+}
+
+.stageMenu>button {
+  flex-basis: 50px;
+  font-size: 1.3em;
+  height: 50px;
+  margin: 12.5px 0;
+}
+
+#closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+  font-size: 1.5em;
+}
+
+@media screen and (min-width: 768px) {
+  .stageMenuWrapper {
+    inset-inline: 50px;
+    padding: 20px;
+  }
+  
+  .stageMenu {
+    width: 400px;
+    column-gap: 25px;
+  }
+
+  .stageMenu>button {
+    flex-basis: 60px;
+    font-size: 1.5em;
+    height: 60px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .stageMenu {
+    width: 690px;
+    column-gap: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .stageMenu {
+    width: 825px;
+    column-gap: 25px;
   }
 }
