--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 350px;
   min-height: 100vh;
 }
 
 #app {
   position: relative;
   padding-block: 10px;
-  width: clamp(400px, 100%, 1200px);
+  width: clamp(350px, 100%, 1200px);
   margin: 0 auto;
   text-align: center;
   background-color: rgb(132, 214, 187);
@@ -33,7 +33,7 @@ body {
   border-radius: 8px;
   border: 2px solid #406b6e;
   padding: 0.5em;
-  margin: 3px;
+  /* margin: 3px; */
   font-size: 0.8em;
   font-weight: 500;
   font-family: inherit;
@@ -74,7 +74,7 @@ body {
 }
 
 #stageCounter {
-  display: inline;
+  display: block;
   font-size: 2em;
   padding-right: 20px;
 }
@@ -106,9 +106,19 @@ body {
     width: 80%;
     padding-inline: 2rem;
   }
+  #nav>button,
+  #navBottom>button,
+  #stageMenu>button,
+  #resetAllStageMsg>button {
+    margin: 5px;
+  }
+  #stageCounter {
+    display: inline-block;
+  }
 }
 
 @media screen and (min-width: 768px) {
+
   #nav>button,
   #navBottom>button {
     padding: 0.6em;
@@ -130,8 +140,8 @@ body {
 #virtualKeyboard button {
   cursor: pointer;
   background-color: #2dd3e2;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   padding: 0;
   border: none;
   border-radius: 5px;
@@ -140,26 +150,26 @@ body {
 
 #upBtn {
   position: absolute;
-  top: -30px;
+  top: -40px;
 }
 
 #downBtn {
   position: absolute;
-  top: 30px;
+  top: 40px;
 }
 
 #leftBtn {
   position: absolute;
-  left:-30px;
+  left: -40px;
 }
 
 #rightBtn {
   position: absolute;
-  left: 30px;
+  left: 40px;
 }
 
 @media (pointer: coarse) {
-  #virtualKeyboard{
+  #virtualKeyboard {
     display: block;
   }
 }
@@ -210,7 +220,7 @@ body {
     inset-inline: 50px;
     padding: 20px;
   }
-  
+
   #stageMenu {
     width: 400px;
     column-gap: 25px;
