--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ body {
 #completeMsg,
 #resetAllStageMsg {
   display: none;
-  font-size: min(3vw, 40px);
+  line-height: 1.4;
+  font-size: clamp(20px, 3.2vw, 36px);
   position: absolute;
   top: 100px;
   min-width: 200px;
