--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   box-sizing: border-box;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   font-weight: 400;
   color: #213547;
   background-color: #ffffff;
